Added answer quiz endpoint
