# src/routes/user.ts
@@ -11,6 +11,7 @@ import {
     getQuizQuestions,
     getUserAvailableRewards,
     buyUserReward,
+    answerQuiz,
 } from '../controllers/userController';
 import { authenticateToken } from '../middlewares/authHandler';
 
@@ -29,5 +30,5 @@ userRouter.get('/chapters/:chapterId/quizzes', getUserQuizzes);
 userRouter.get('/quizzes/:quizId/questions', getQuizQuestions);
 userRouter.get('/rewards/available', getUserAvailableRewards);
 userRouter.post('/rewards/:rewardId', buyUserReward);
-
+userRouter.post('/quizzes/:quizId/answer', answerQuiz);
 export default userRouter;
